--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     
     <!--Links Inside of Drop Down-->
     <ul id="menu">
-      <a href="#"><li>Home</li></a>
+      <a href="https://agardner007.github.io/Portfolio2/"><li>Home</li></a>
       <a href="#"><li>Contact</li></a>
       <a href="#"><li>About</li></a>
     </ul>
@@ -44,7 +44,8 @@
          <section class="projectBlock"> 
        <!-- Column Layout -->
        <div class="contentBlock">
-               <img src="images/screenshot2.png" alt="hero1" width="100%">
+        <a href="https://agardner007.github.io/Wk-20-Homework/">
+               <img src="images/screenshot2.png" alt="hero1" width="100%"></a>
                <h2>Hawaii.gov Homepage Recreate</h2>
                <p>Heuristic Evaluation | UX Research | UI Design</p>
                
